--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
- <meta name="language" content="de" />
- <meta name="author" content="Valentin Manthei - lightIRC.com" />
- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
- <script type="text/javascript" src="config.js"></script>
+ <script type="text/javascript" src="swfobject.js"></script>
+ <script type="text/javascript" src="config.js?cachebust-2015-04-13"></script>
  <title>PonyChat Webchat</title>
  <style type="text/css">
 	html { height: 100%; overflow: hidden; }
@@ -15,7 +13,7 @@
 
 <body>
  <div id="lightIRC" style="height:100%; text-align:center;">
-  <p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" /></a></p>
+  <p><a href="http://www.adobe.com/go/getflashplayer"><img src="get_flash_player.gif" alt="Get Adobe Flash player" /></a></p>
  </div>
  
  <script type="text/javascript">
