Add link to webchat help

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@ swfobject.embedSWF("lightIRC.swf", "lightIRC", "100%", "100%", "10.0.0", "expres
 		<div id="chat-footer">
 			<p class="left">
 				<a href="https://ponychat.net/" onclick="window.open('https://ponychat.net/','new','');return false">PonyChat Network</a> |
-				<a href="https://ponychat.net/network-rules/" onclick="window.open('https://ponychat.net/network-rules/','new','');return false">Terms of Service</a>
+				<a href="https://ponychat.net/network-rules/" onclick="window.open('https://ponychat.net/network-rules/','new','');return false">Terms of Service</a> |
+				<a href="https://ponychat.net/help/webchat/" onclick="window.open('https://ponychat.net/help/webchat/', 'new', '');return false">Webchat Help</a>
 			</p>
 			<p class="right">
 				Other web clients available:
