--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 	<body onload="resize()" onresize="resize()">
 		<div id="lightIRC" style="height:100%; text-align:center;">
-			<p><a href="http://www.adobe.com/go/getflashplayer"><img src="get_flash_player.gif" alt="Get Adobe Flash player" /></a></p>
+			<p>Having trouble? Try installing Flash or <a href="https://ponychat.net/help/webchat/">reading our help page</a>. <br /> <br /> <a href="http://www.adobe.com/go/getflashplayer"><img src="get_flash_player.gif" alt="Get Adobe Flash player" /></a></p>
 		</div>
 
 		<script type="text/javascript">
